source/tests/errors/old/cannot_assign_not_variable.apex
function xyu()
    return 0

xyu = 5